fixed technology component from overflowing

--- a/src/stylesheets/components/aboutMe/_aboutme.scss
+++ b/src/stylesheets/components/aboutMe/_aboutme.scss
@@ -111,7 +111,6 @@
   }
 
   &__contents-item {
-    height: 100%;
     animation: animateInFromTop 0.5s ease-in-out forwards;
     @include media-breakpoint-up(lg) {
       animation: animateInFromLeft 0.5s ease-in-out forwards;
@@ -133,7 +132,7 @@
   }
 
   &__technologies {
-    height: 20%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(125px, 1fr));
     justify-items: center;
@@ -148,6 +147,7 @@
     height: 3rem;
     max-height: 100%;
     width: 10rem;
+    margin: auto;
   }
 
   &__technology-logo {
