--- a/src/stylesheets/components/projects/_projects.scss
+++ b/src/stylesheets/components/projects/_projects.scss
@@ -86,15 +86,10 @@
 
   &__project-technologies {
     height: 100%;
-  }
-
-  &__project-technologies {
-    height: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(125px, 1fr));
     justify-items: center;
     align-items: center;
-    grid-column-gap: 1rem;
     grid-row-gap: 1rem;
   }
 
